--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "devDependencies": {
     "gh-pages": "^6.0.0"
   },
-  "scripts":{
-    "deploy":"gh-pages -d pagina-fitness"
+  "scripts": {
+    "deploy": "gh-pages -d"
   }
 }
